syntax = "proto3";
package oracle.v1;

option go_package = "github.com/ODIN-PROTOCOL/odin-core/x/oracle/types";

import "gogoproto/gogo.proto";
import "oracle/v1/oracle.proto";
import "oracle/v1/params.proto";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated DataSource data_sources = 2 [ (gogoproto.nullable) = false ];
  repeated OracleScript oracle_scripts = 3 [ (gogoproto.nullable) = false ];
  OraclePool oracle_pool = 4 [ (gogoproto.nullable) = false ];
  string module_coins_account = 5 [ (gogoproto.moretags) = "yaml:\"module_coins_account\"" ];
}
